--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,33 @@ header {
     margin-bottom: 15px;
 }
 
+@media all (max-width: 980px) {
+    header {
+
+    }
+} 
+
 #wrapper {
     max-width: 960px;
     margin: auto;
+}
+
+@media all (max width: 980px) {
+    #wrapper {
+        max-width: 980px;
+    }
+}
+
+@media all (max-width: 768px) {
+    #wrapper {
+        max-width: 760px;
+    }
+}
+
+@media all (max-width: 640px) {
+    #wrapper {
+        max-width: 620px;
+    }
 }
 
 .name {
@@ -26,6 +50,23 @@ header {
     height: 75px;
 }
 
+@media all (max-width: 980px) {
+
+}
+
+@media all (max-width: 760px) {
+
+}
+
+@media all (max-width: 640px) {
+    .name {
+        float: none;
+        height: 40px;
+
+    }
+}
+
+
 .name h1 {
     color: white;
 }
@@ -34,6 +75,13 @@ nav {
     float: right;
     text-align: center;
     height: 75px;
+}
+
+@media all (max-width: 640px) {
+    nav {
+        float: none;
+        height: 40px;
+    }
 }
 
 nav a {
@@ -53,6 +101,28 @@ nav a {
     border: 5px;
     border-color: black;
     
+}
+
+@media all (max-width: 980px) {
+    .section {
+        margin: none;
+    }
+}
+
+@media all (max-width: 768px) {
+    .section {
+        width: 760px;
+        margin: none;
+    }
+}
+
+@media all (max-width: 640px) {
+    .section {
+        width: 620px;
+        margin: none;
+        Padding: 5px 5px 5px 5px;
+        border: 1px;
+    }
 }
 
 .section h2 {
